--- a/src/scss/partials/components/_buttons.scss
+++ b/src/scss/partials/components/_buttons.scss
@@ -3,3 +3,14 @@
 //
 // All button styles should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
+
+/* Components */
+
+
+/* Elements */
+
+
+/* Theme */
+
+
+/* Modifiers */
