--- a/src/scss/partials/components/_common.scss
+++ b/src/scss/partials/components/_common.scss
@@ -4,6 +4,13 @@
 // All common styles should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
 
-.screen-reader-text {
-  display: none;
-}
+/* Components */
+
+
+/* Elements */
+
+
+/* Theme */
+
+
+/* Modifiers */
