--- a/src/scss/partials/layout/_layouts.scss
+++ b/src/scss/partials/layout/_layouts.scss
@@ -4,7 +4,7 @@
 // These files should only include layout styles.
 ////////////////////////
 
-@include add-grid(1);
-@include add-grid($num-columns at $small);
+@include add-grid($num-columns);
+@include add-grid($num-columns-small at $small);
 @include add-gutter-style('split');
 @include add-gutter(rem-calc($global-padding));
