--- a/src/scss/partials/components/_fonts.scss
+++ b/src/scss/partials/components/_fonts.scss
@@ -4,3 +4,4 @@
 // All font styles should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
 
+@import url('https://fonts.googleapis.com/css?family=Merriweather:300i|Poppins:300');
