--- a/src/scss/partials/components/_icons.scss
+++ b/src/scss/partials/components/_icons.scss
@@ -3,3 +3,5 @@
 //
 // All icon styles should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
+
+@import 'fontello';
