--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,7 @@
 ////////////////////////
 // Reset & Base Import
 ////////////////////////
-@import "compass/reset";
+@import 'compass/reset';
 
 ////////////////////////
 // Import Layouts
