--- a/src/scss/partials/global/_variables.scss
+++ b/src/scss/partials/global/_variables.scss
@@ -8,11 +8,11 @@
 // ---------
 
 $global-width:             1260;
-$global-font-size:         18px;
+$global-font-size:         16px;
 $global-lineheight:        1.4;
 
-$primary-color:            #1779d4;
-$secondary-color:          #1779d4;
+$primary-color:            #fff;
+$secondary-color:          #000;
 $trinary-color:            #5ba253;
 
 $success-color:            $trinary-color;
@@ -29,11 +29,11 @@ $medium-gray:              #7e7e7e;
 $dark-gray:                #333;
 $xdark-gray:               #dfe0e1;
 
-$body-background:          $white;
+$body-background:          $black;
 $border-color:             $light-gray;
 
-$body-font-color:          $dark-gray;
-$body-font-family:         Arial, Helvetica Neue, Helvetica, sans-serif;
+$body-font-color:          $white;
+$body-font-family:         'Merriweather', serif;
 $body-antialiased:         true;
 $global-margin:            ($global-font-size * 2);
 $global-padding:           30;
@@ -65,11 +65,11 @@ $large-down:  0px $large;
 
 $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
-$header-font-family: $body-font-family;
+$header-font-family: 'Poppins', sans-serif;
 $header-font-weight: $global-weight-normal;
 $header-font-style:  $global-weight-normal;
 
-$header-color:             $black;
+$header-color:             inherit;
 $header-lineheight:        $global-lineheight;
 $header-margin-bottom:     rem-calc($global-margin);
 $header-text-rendering:    optimizeLegibility;
