--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,9 @@
-////////////////////////
+////////////////////////////////////////////////////////////////////////////////
 // Style File
 //
-// This file gets turned into style.css. This file should really hold nothing except for imports of your base, style guide, layout, and design partials.
-////////////////////////
+// This file gets turned into style.css. This file should really hold nothing
+// except for imports of your base, style guide, layout, and design partials.
+////////////////////////////////////////////////////////////////////////////////
 
 ////////////////////////
 // Global Import
