Documentation & structure updates.

--- a/src/scss/partials/components/_common.scss
+++ b/src/scss/partials/components/_common.scss
@@ -6,6 +6,8 @@
 
 /* Components */
 
+// Optional. Includes common CSS classes for styling elements (ex. align-left,
+// float-left, etc.)
 @import 'frontend';
 
 
