--- a/src/scss/partials/components/_fontello.scss
+++ b/src/scss/partials/components/_fontello.scss
@@ -1,3 +1,12 @@
+////////////////////////////////////////////////////////////////////////////////
+// Fontello Icons
+//
+// Copy and paste the Fontello icon CSS file here. Fontello helps boost
+// performance by only loading the icons a site needs vs. an entire library.
+//
+// IMPORTANT: Be sure to move the font files in the font/fontello directory.
+////////////////////////////////////////////////////////////////////////////////
+
 @font-face {
   font-family: 'fontello';
   src: url('../font/fontello/fontello.eot?77208441');
