--- a/src/scss/partials/components/_fonts.scss
+++ b/src/scss/partials/components/_fonts.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Font Styles
 //
-// All font styles should be placed here.
+// All font styles/imports should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
 
 @import url('https://fonts.googleapis.com/css?family=Merriweather:300i|Poppins:300');
