--- a/src/scss/partials/components/_frontend.scss
+++ b/src/scss/partials/components/_frontend.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Frontend Styles
 //
-// Includes all Frontend common styles. Optional.
+// Includes all Frontend common styles.
 ////////////////////////////////////////////////////////////////////////////////
 
 /* Alignment */
