--- a/src/scss/partials/components/_icons.scss
+++ b/src/scss/partials/components/_icons.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Icon Styles
 //
-// All icon styles should be placed here.
+// All icon styles/imports should be placed here.
 ////////////////////////////////////////////////////////////////////////////////
 
 @import 'fontello';
