Documentation & structure updates.

--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,100 +1,1 @@
-/*
-Error: File to import not found or unreadable: base.
-       Load paths:
-         /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss
-         /usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets
-         /usr/local/lib/ruby/gems/2.3.0/gems/sassy-maps-0.4.0/sass
-         /usr/local/lib/ruby/gems/2.3.0/gems/breakpoint-2.7.0/stylesheets
-         /usr/local/lib/ruby/gems/2.3.0/gems/singularitygs-1.7.0/stylesheets
-         /usr/local/lib/ruby/gems/2.3.0/gems/toolkit-2.10.0/stylesheets
-         Compass::SpriteImporter
-        on line 9 of /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/partials/components/_components.scss
-        from line 21 of /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/demo.scss
-
-4: // This file gets turned into demo.css. This file should really hold nothing
-5: // except for imports of your base, style guide, layout, and design partials.
-6: ////////////////////////////////////////////////////////////////////////////////
-7: 
-8: ////////////////////////
-9: // Global Import
-10: ////////////////////////
-11: @import 'partials/global/global';
-12: 
-13: ////////////////////////
-14: // Import Layouts
-
-Backtrace:
-/Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/partials/components/_components.scss:9
-/Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/demo.scss:21
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:45:in `import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:28:in `imported_file'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:37:in `css_import?'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:313:in `visit_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `block (2 levels) in visit_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `map'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:328:in `block in visit_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:88:in `block in with_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:88:in `with_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:325:in `visit_import'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:20:in `render'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/engine.rb:281:in `render'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:494:in `update_stylesheet'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/lib/ruby/gems/2.3.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/sass_compiler.rb:40:in `compile!'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/commands/update_project.rb:49:in `perform'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/commands/base.rb:18:in `execute'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/commands/project_base.rb:19:in `execute'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/bin/compass:30:in `block in <top (required)>'
-/usr/local/lib/ruby/gems/2.3.0/gems/compass-1.0.3/bin/compass:44:in `<top (required)>'
-/usr/local/bin/compass:23:in `load'
-/usr/local/bin/compass:23:in `<top (required)>'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli/exec.rb:74:in `load'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli/exec.rb:74:in `kernel_load'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli/exec.rb:27:in `run'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli.rb:332:in `exec'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/vendor/thor/lib/thor/command.rb:27:in `run'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/vendor/thor/lib/thor/invocation.rb:126:in `invoke_command'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/vendor/thor/lib/thor.rb:359:in `dispatch'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli.rb:20:in `dispatch'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/vendor/thor/lib/thor/base.rb:440:in `start'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/cli.rb:11:in `start'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/exe/bundle:34:in `block in <top (required)>'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/lib/bundler/friendly_errors.rb:100:in `with_friendly_errors'
-/usr/local/lib/ruby/gems/2.3.0/gems/bundler-1.13.0/exe/bundle:26:in `<top (required)>'
-/usr/local/bin/bundle:23:in `load'
-/usr/local/bin/bundle:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: base.\A        Load paths:\A          /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss\A          /usr/local/lib/ruby/gems/2.3.0/gems/compass-core-1.0.3/stylesheets\A          /usr/local/lib/ruby/gems/2.3.0/gems/sassy-maps-0.4.0/sass\A          /usr/local/lib/ruby/gems/2.3.0/gems/breakpoint-2.7.0/stylesheets\A          /usr/local/lib/ruby/gems/2.3.0/gems/singularitygs-1.7.0/stylesheets\A          /usr/local/lib/ruby/gems/2.3.0/gems/toolkit-2.10.0/stylesheets\A          Compass::SpriteImporter\A         on line 9 of /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/partials/components/_components.scss\A         from line 21 of /Users/bmarshall/Documents/Development/Sandbox/frontend/src/scss/demo.scss\A \A 4: // This file gets turned into demo.css. This file should really hold nothing\A 5: // except for imports of your base, style guide, layout, and design partials.\A 6: ////////////////////////////////////////////////////////////////////////////////\A 7: \A 8: ////////////////////////\A 9: // Global Import\A 10: ////////////////////////\A 11: @import 'partials/global/global';\A 12: \A 13: ////////////////////////\A 14: // Import Layouts"; }
+@charset "UTF-8";@font-face{font-family:Merriweather;font-style:italic;font-weight:300;src:local('Merriweather Light Italic'),local('Merriweather-LightItalic'),url(https://fonts.gstatic.com/s/merriweather/v13/EYh7Vl4ywhowqULgRdYwIH3uxQAI1Bvm-GxtFNy4yl0.ttf) format('truetype')}@font-face{font-family:Poppins;font-style:normal;font-weight:300;src:local('Poppins Light'),local('Poppins-Light'),url(https://fonts.gstatic.com/s/poppins/v1/D2gN9uyZ9Ucx1fJ1Fhb7sy3USBnSvpkopQaUR-2r7iU.ttf) format('truetype')}html{box-sizing:border-box}*,:after,:before{box-sizing:inherit}embed,img,object,video{max-width:100%;height:auto}.container{width:100%;max-width:80.625rem;margin:0 auto}.container:after{content:"";display:table;clear:both}.col-1{width:100%;float:right;margin-left:0;margin-right:0;clear:none;padding-left:.9375rem;padding-right:.9375rem}@media (min-width:980px){.col-1-small{width:100%;float:right;margin-left:0;margin-right:0;clear:none;padding-left:.9375rem;padding-right:.9375rem}}@font-face{font-family:fontello;src:url(../font/fontello/fontello.eot?77208441);src:url(../font/fontello/fontello.eot?77208441#iefix) format("embedded-opentype"),url(../font/fontello/fontello.woff2?77208441) format("woff2"),url(../font/fontello/fontello.woff?77208441) format("woff"),url(../font/fontello/fontello.ttf?77208441) format("truetype"),url(../font/fontello/fontello.svg?77208441#fontello) format("svg");font-weight:400;font-style:normal}[class*=" icon-"]:before,[class^=icon-]:before{font-family:fontello;font-style:normal;font-weight:400;speak:none;display:inline-block;text-decoration:inherit;width:1em;margin-right:.2em;text-align:center;font-variant:normal;text-transform:none;line-height:1em;margin-left:.2em;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.icon-github-circled:before{content:'\f09b'}.float-left{float:left}.float-right{float:right}.align-left,.align-right{text-align:left}.align-center{text-align:center}@media (min-width:980px){.float-left-small{float:left}.float-right-small{float:right}.align-left-small,.align-right-small{text-align:left}.align-center-small{text-align:center}}.list-inline-block{margin:0;padding:0;list-style:none}.list-inline-block li{display:list-inline-block}body.demo .demo__content{display:inline-block;position:absolute;top:50%;left:50%;-ms-transform:translateX(-50%) translateY(-50%);-webkit-transform:translateX(-50%) translateY(-50%);transform:translateX(-50%) translateY(-50%)}body.demo .demo__content h1,body.demo .demo__content ul{margin:0}body.demo .demo__content ul{font-size:2rem}body.demo .demo__content h1 span{display:inline-block;font-size:.8125rem;vertical-align:top}
