--- a/src/scss/partials/components/_common.scss
+++ b/src/scss/partials/components/_common.scss
@@ -6,8 +6,8 @@
 
 /* Components */
 
-// Optional. Includes common CSS classes for styling elements (ex. align-left,
-// float-left, etc.)
+// Includes common CSS classes for styling elements (ex. align-left,
+// float-left, etc.) Optional.
 @import 'frontend';
 
 
