--- a/src/scss/partials/components/_components.scss
+++ b/src/scss/partials/components/_components.scss
@@ -5,12 +5,10 @@
 // folder, with everything being imported, in cascading order, into this file.
 ////////////////////////////////////////////////////////////////////////////////
 
-//
-@import 'typography';
+// Common Components
 @import 'fonts';
 @import 'icons';
 @import 'common';
-
 
 
 ///////////////////////////////////////
