--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@
 // Reset & Base Import
 ////////////////////////
 @import 'compass/reset';
-@import 'base/base';
+@import 'partials/base/base';
 
 ////////////////////////
 // Import Layouts
