--- a/src/scss/partials/layout/_layouts.scss
+++ b/src/scss/partials/layout/_layouts.scss
@@ -1,7 +1,8 @@
 ////////////////////////////////////////////////////////////////////////////////
 // Layout Partials
 //
-// These files should only include layout styles.
+// These files should only include layout styles. This includes grid styles and
+// main page layouts.
 ////////////////////////////////////////////////////////////////////////////////
 
 @include add-grid($num-columns);
@@ -18,18 +19,25 @@
 
 /* Elements */
 
-.col-#{$num-columns} {
+// Build additional mobile columns using the format below:
+// (.col-NUM_COL_SPAN-STARTING_AT)
+.col-#{$num-columns}-1 {
   @include grid-span($num-columns, 1);
 }
 
 @include breakpoint($small) {
-  .col-#{$num-columns}-small {
+  // Build additional desktop columns using the format below:
+  // (.col-NUM_COL_SPAN-STARTING_AT-small)
+  .col-#{$num-columns}-1-small {
     @include grid-span($num-columns-small, 1);
   }
 }
 
 
 /* Theme */
+
+// Layouts should not have any theme related styles (always seperate layout from
+// design).
 
 
 /* Modifiers */
