--- a/src/scss/partials/components/_frontend.scss
+++ b/src/scss/partials/components/_frontend.scss
@@ -4,6 +4,10 @@
 // Includes all Frontend common styles.
 ////////////////////////////////////////////////////////////////////////////////
 
+.screen-reader-text {
+  display: none;
+}
+
 /* Alignment */
 
 .float-left {
