--- a/src/scss/partials/components/_frontend.scss
+++ b/src/scss/partials/components/_frontend.scss
@@ -23,7 +23,7 @@
 }
 
 .align-right {
-  text-align: left;
+  text-align: right;
 }
 
 .align-center {
@@ -44,7 +44,7 @@
   }
 
   .align-right-small {
-    text-align: left;
+    text-align: right;
   }
 
   .align-center-small {
