--- a/src/scss/partials/global/_variables.scss
+++ b/src/scss/partials/global/_variables.scss
@@ -11,7 +11,7 @@ $global-width:             1140;
 $global-font-size:         16px;
 $global-lineheight:        1.3;
 
-$primary-color:            #fff;
+$primary-color:            #0092dd;
 $secondary-color:          #000;
 
 $success-color:            #009900;
