--- a/src/scss/wordpress.scss
+++ b/src/scss/wordpress.scss
@@ -6,6 +6,11 @@
 // partials.
 ////////////////////////////////////////////////////////////////////////////////
 
+////////////////////////
+// Global Import
+////////////////////////
+@import 'partials/global/global';
+
 //////////////////////////////
 // Import Wordpress Components
 //////////////////////////////
