--- a/src/scss/partials/components/_wordpress.scss
+++ b/src/scss/partials/components/_wordpress.scss
@@ -6,37 +6,37 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 .alignnone {
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 .aligncenter,
 div.aligncenter {
   display: block;
-  margin: 5px auto 5px auto;
+  margin: rem-calc(5) auto;
 }
 
 .alignright {
   float:right;
-  margin: 5px 0 20px 20px;
+  margin: rem-calc(5 0 20 20);
 }
 
 .alignleft {
   float: left;
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 a img.alignright {
   float: right;
-  margin: 5px 0 20px 20px;
+  margin: rem-calc(5 0 20 20);
 }
 
 a img.alignnone {
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 a img.alignleft {
   float: left;
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 a img.aligncenter {
@@ -47,22 +47,22 @@ a img.aligncenter {
 
 .wp-caption {
   background: #fff;
-  border: 1px solid #f0f0f0;
+  border: rem-calc(1) solid #f0f0f0;
   max-width: 96%; /* Image does not overflow the content area */
-  padding: 5px 3px 10px;
+  padding: rem-calc(5 3 10);
   text-align: center;
 }
 
 .wp-caption.alignnone {
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 .wp-caption.alignleft {
-  margin: 5px 20px 20px 0;
+  margin: rem-calc(5 20 20 0);
 }
 
 .wp-caption.alignright {
-  margin: 5px 0 20px 20px;
+  margin: rem-calc(5 0 20 20);
 }
 
 .wp-caption img {
@@ -75,38 +75,38 @@ a img.aligncenter {
 }
 
 .wp-caption p.wp-caption-text {
-  font-size: 11px;
-  line-height: 17px;
+  font-size: rem-calc(11);
+  line-height: rem-calc(17);
   margin: 0;
-  padding: 0 4px 5px;
+  padding: rem-calc(0 4 5);
 }
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
-  clip: rect(1px, 1px, 1px, 1px);
+  clip: rect(rem-calc(1), rem-calc(1), rem-calc(1), rem-calc(1));
   position: absolute !important;
   white-space: nowrap;
-  height: 1px;
-  width: 1px;
+  height: rem-calc(1);
+  width: rem-calc(1);
   overflow: hidden;
 }
 
 .screen-reader-text:focus {
   background-color: #f1f1f1;
-  border-radius: 3px;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
+  border-radius: rem-calc(3);
+  box-shadow: rem-calc(0 0 2 2) rgba(0, 0, 0, 0.6);
   clip: auto !important;
   color: #21759b;
   display: block;
-  font-size: 14px;
+  font-size: rem-calc(14);
   font-size: 0.875rem;
   font-weight: bold;
   height: auto;
-  left: 5px;
+  left: rem-calc(5);
   line-height: normal;
-  padding: 15px 23px 14px;
+  padding: rem-calc(15 23 14);
   text-decoration: none;
-  top: 5px;
+  top: rem-calc(5);
   width: auto;
   z-index: 100000; /* Above WP toolbar. */
 }
