Added WP scripts

--- a/src/scss/partials/components/_wordpress.scss
+++ b/src/scss/partials/components/_wordpress.scss
@@ -5,6 +5,9 @@
 // for more details.
 ////////////////////////////////////////////////////////////////////////////////
 
+.site-title {}
+.site-description {}
+
 .alignnone {
   margin: rem-calc(5 20 20 0);
 }
