--- a/src/scss/partials/components/_common.scss
+++ b/src/scss/partials/components/_common.scss
@@ -12,6 +12,15 @@
 
 
 /* Elements */
+.icon {
+  display: inline-block;
+  fill: currentColor;
+  height: 1em;
+  position: relative; /* Align more nicely with capital letters */
+  top: -0.0625em;
+  vertical-align: middle;
+  width: 1em;
+}
 
 
 /* Theme */
