--- a/src/scss/partials/global/_variables.scss
+++ b/src/scss/partials/global/_variables.scss
@@ -35,7 +35,7 @@ $body-font-color:          $black;
 $body-font-family:         Arial, Helvetica, sans-serif;
 $body-antialiased:         true;
 $global-margin:            1.5rem;
-$global-padding:           1rem;
+$global-padding:           30;
 
 $global-weight-normal:     400;
 $global-weight-medium:     500;
